--- a/meta.yaml
+++ b/meta.yaml
@@ -16,7 +16,7 @@ build:
   script: > 
     mkdir -p $PREFIX/share && cp workflow/plastedma.py $PREFIX/share && cp -R workflow/*/ $PREFIX/share 
     && chmod +x $PREFIX/share/plastedma.py
-    && ln -s $PREFIX/share/plastedma.py $PREFIX/bin/plastedma
+    && ln -s $PREFIX/share/plastedma.py $PREFIX/bin/plastedma.py
 
 requirements:
   run:
