--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,4 +56,4 @@ jobs:
         run: docker run plastedma bin/bash -c "ls bin/"
 
       - name: Annotation workflow by FASTA input, report text creation and excel table format
-        run: docker run plastedma bin/workflow/bash -c "plastedma.py -i PlastEDMA/ci/sequences.fasta -o output_results -rt --output_type excel"
+        run: docker run plastedma bin/bash -c "workflow/plastedma.py -i PlastEDMA/ci/sequences.fasta -o output_results -rt --output_type excel"
