--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         run: docker run plastedma bin/bash -c "ls"
 
       - name: Check copied directories
-        run: docker run plastedma bin/bash -c "ls bin/"
+        run: docker run plastedma bin/bash -c "ls workflow"
 
       - name: Annotation workflow by FASTA input, report text creation and excel table format
-        run: docker run plastedma bin/bash -c "workflow/plastedma.py -i PlastEDMA/ci/sequences.fasta -o output_results -rt --output_type excel"
+        run: docker run plastedma bin/bash -c "bin/workflow/plastedma.py -i PlastEDMA/ci/sequences.fasta -o output_results -rt --output_type excel"
