--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,8 +52,8 @@ jobs:
       - name: Check base entrypoint
         run: docker run plastedma bin/bash -c "ls"
 
-      - name: Check copied directories
-        run: docker run plastedma bin/bash -c "ls workflow"
+      - name: Print PlastEDMA's main script
+        run: docker run plastedma bin/bash -c "plastedma.py -h"
 
       - name: Annotation workflow by FASTA input, report text creation and excel table format
-        run: docker run plastedma bin/bash -c "bin/workflow/plastedma.py -i PlastEDMA/ci/sequences.fasta -o output_results -rt --output_type excel"
+        run: docker run plastedma bin/bash -c "plastedma.py -i PlastEDMA/ci/sequences.fasta -o output_results -rt --output_type excel"
