--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,4 +59,4 @@ jobs:
         run: docker run plastedma bin/bash -c "plastedma.py -i PlastEDMA/ci/sequences.fasta -o output_results -rt --output_type excel"
 
       - name: Annotation workflow with gut metagenome proteins, generate same outputs
-        run: docker run plastedma bin/bash -c "plastedma.py -i PlastEDMA/ci/gut_metagenome_proteins.fasta -o output_results -rt --output_type excel"
+        run: docker run plastedma bin/bash -c "plastedma.py -i PlastEDMA/ci/gut_metagenome_proteins.fasta -ip metagenome -o output_results -rt --output_type excel"
