--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,7 +4,7 @@ sequences:
   MNP1: resources/Data/FASTA/MNP1/Q02567_AA.fasta
   rubredoxin: resources/Data/FASTA/rubredoxin/Q9HTK9_AA.fasta
   soybean: resources/Data/FASTA/soybean/O22443_AA.fasta
-
+threads: 1
 query: "resources/Data/FASTA/DataBases/familiesDB.fasta"
 
 upi_database: "resources/Data/FASTA/literature_seq/lit_sequences.fasta"
