--- a/meta.yaml
+++ b/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "PlastEDMA" %}
-{% set version = "0.1.2" %}
+{% set version = "0.2.0" %}
 {% set sha256 = "08946de7f6c560a75a451aeebca6e5039f0f1c59aea68624682f1d3987320b40" %}
 
 package:
@@ -16,6 +16,7 @@ build:
 
 requirements:
   run:
+    - upimpai
     - pyyaml
     - hmmer
     - t-coffee
