--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -37,7 +37,7 @@ rule UPIMAPI_parse:
 	conda:
 		"envs/pandas.yaml"
 	script:
-		"scripts/UPIMAPI_parser.py"
+		"scripts/db_construction/UPIMAPI_parser.py"
 
 
 wildcard_constraints:
@@ -53,9 +53,9 @@ rule seq_download:
 		"resources/Data/FASTA/UPIMAPI/{threshold}.fasta"  # terá que fazer os ficheiros para todos os thresholds de uma só vez
 	threads: config["threads"]
 	log:
-		"logs/seq_download.log"
+		"logs/seq_download_{threshold}.log"
 	script:
-		"scripts/seq_download.py"
+		"scripts/db_construction/seq_download.py"
 
 
 # rule mockup:
@@ -75,7 +75,7 @@ rule initial_cdhit_per_threshold:
 		"resources/Data/FASTA/UPIMAPI/cd-hit90_after_diamond_{threshold}.fasta",  # after upimapi!
 	threads: config["threads"]
 	log:
-		"logs/initial_cdhit_per_threshold.log"
+		"logs/initial_cdhit_per_threshold_{threshold}.log"
 	shell:
 		"cd-hit -i {input} -o {output} -c 0.9 -n 5 -M 16000 -d 0 -T 8"
 
@@ -94,12 +94,12 @@ rule cdhit_parse:
 	input:
 		"resources/Data/FASTA/UPIMAPI/cd-hit90_after_diamond_{threshold}.fasta.clstr"
 	output:
-		"resources/Data/Tables/cdhit_clusters_{threshold}_afterUPIMAPI.tsv"  # talvez meter numa pasta so para isto
+		"resources/Data/Tables/CDHIT_clusters/cdhit_clusters_{threshold}_afterUPIMAPI.tsv"
 	threads: config["threads"]
 	log:
-		"logs/cdhit_parse.log"
+		"logs/cdhit_parse_{threshold}.log"
 	script:
-		"scripts/CDHIT_parser.py"
+		"scripts/db_construction/CDHIT_parser.py"
 
 
 # rule mockup:
@@ -133,9 +133,9 @@ rule seq_download_cdhit:
 		# expand("resources/Data/FASTA/CDHIT/{threshold}/{cluster}.fasta", filtered_product, threshold=config["thresholds"], cluster=all_clusters)
 	threads: config["threads"]
 	log:
-		"logs/seq_download_cdhit.log"
+		"logs/seq_download_cdhit{threshold}_{cluster}.log"
 	script:
-		"scripts/CDHIT_seq_download.py" # from_cdhit
+		"scripts/db_construction/CDHIT_seq_download.py" # from_cdhit
 
 
 # rule mockup:
@@ -161,9 +161,11 @@ rule t_coffee:
 		# expand("resources/Alignments/MultipleSequencesAlign/T_Coffee_UPI/{threshold}/{cluster}.clustal_aln", threshold=config["thresholds"], cluster=threshold2clusters[threshold])
 	threads: config["threads"]
 	log:
-		"logs/t_coffee.log"~
-	script:
-		"scripts/t_coffee_run.py"
+		"logs/t_coffee_{threshold}_{cluster}.log"
+	# script:
+	# 	"scripts/db_construction/t_coffee_run.py"
+	shell:
+		"t_coffee {input} -output clustalw_aln -outfile {output}"
 
 
 # rule mockup:
@@ -184,7 +186,7 @@ rule hmmbuild:
 		"resources/Data/HMMs/After_tcoffee_UPI/{threshold}/{cluster}.hmm"
 	threads: config["threads"]
 	log:
-		"logs/hmmbuild.log"
+		"logs/hmmbuild_{threshold}_{cluster}.log"
 	shell:
 		"hmmbuild {output} {input}"
 
@@ -203,7 +205,11 @@ rule hmmbuild:
 files = {threshold: glob(f"resources/Data/FASTA/CDHIT/{threshold}/*.fasta") for threshold in config["thresholds"]}
 threshold2clusters = {k : [v.split("/")[-1].split("\\")[-1].split('.f')[0] for v in values] for k, values in files.items()}
 
-from scripts.snakemake_util import cat_hmms_input
+# from scripts.snakemake_util import cat_hmms_input
+
+def cat_hmms_input(wildcards):
+	return expand("resources/Data/HMMs/After_tcoffee_UPI/{threshold}/{cluster}.hmm", threshold=wildcards, cluster=threshold2clusters[wildcards])
+
 
 rule cat_hmms:
 	input:
@@ -212,7 +218,7 @@ rule cat_hmms:
 		"resources/Data/HMMs/After_tcoffee_UPI/{threshold}.hmm"
 	threads: config["threads"]
 	log:
-		"logs/cat_hmms.log"
+		"logs/cat_hmms_{threshold}.log"
 	shell:
 		"cat {input} > {output}"
 
