--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,12 +1,17 @@
 database: null
 hmmsearch_out_type: tsv
-input_file: null
+input_file: sequences.fasta
 input_file_db_const: null
 input_type: protein
 metagenomic: false
 out_table_format: excel
 output_directory: output_results
-seqids: []
+seqids:
+- A0A1H6AD45
+- G9BY57
+- O22443
+- Q02567
+- Q9HTK9
 threads: 1
 thresholds:
 - 60-65
@@ -15,5 +20,5 @@ thresholds:
 - 75-80
 - 80-85
 - 85-90
-validation: true
+validation: false
 workflow: annotation
