--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           name: plastedma
           path: /tmp/plastedma.tar
 
-  use:
+  annotation:
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -60,15 +60,111 @@ jobs:
 
       - name: Annotation workflow with gut metagenome proteins (negative dataset), generate same outputs
         run: docker run plastedma bin/bash -c "plastedma.py -i PlastEDMA/ci/gut_metagenome_proteins.fasta -ip metagenome -o output_results -rt --output_type excel"
-      
+
+  validation:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: plastedma
+          path: /tmp
+
+      - name: Load Docker image
+        run: |
+          docker load --input /tmp/plastedma.tar
+          docker image ls -a
+
+      - name: Check base entrypoint
+        run: docker run plastedma bin/bash -c "ls"
+
+      - name: Print PlastEDMA's main script
+        run: docker run plastedma bin/bash -c "plastedma.py -h"
+
       - name: Validation workflow alone
         run: docker run plastedma bin/bash -c "plastedma.py --validation"
+
+  annotation_validation:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: plastedma
+          path: /tmp
+
+      - name: Load Docker image
+        run: |
+          docker load --input /tmp/plastedma.tar
+          docker image ls -a
+
+      - name: Check base entrypoint
+        run: docker run plastedma bin/bash -c "ls"
+
+      - name: Print PlastEDMA's main script
+        run: docker run plastedma bin/bash -c "plastedma.py -h"
       
       - name: Annotation workflow with gut metagenome proteins (negative dataset), add model validation script
         run: docker run plastedma bin/bash -c "plastedma.py -i PlastEDMA/ci/gut_metagenome_proteins.fasta -ip metagenome -o output_results -rt --output_type excel --validation"
-      
+
+  annotation_validation_swapdb:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: plastedma
+          path: /tmp
+
+      - name: Load Docker image
+        run: |
+          docker load --input /tmp/plastedma.tar
+          docker image ls -a
+
+      - name: Check base entrypoint
+        run: docker run plastedma bin/bash -c "ls"
+
+      - name: Print PlastEDMA's main script
+        run: docker run plastedma bin/bash -c "plastedma.py -h"
+
       - name: Annotation workflow with gut metagenome proteins (negative dataset), add model validation workflow with POLYMERASE as CONTROL
         run: docker run plastedma bin/bash -c "plastedma.py -i PlastEDMA/ci/gut_metagenome_proteins.fasta -ip metagenome -o output_results -rt --output_type excel --validation -db PlastEDMA/ci/polymerase_DB.fasta"
+
+  # db_construction:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v1
+
+  #     - name: Download artifact
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: plastedma
+  #         path: /tmp
+
+  #     - name: Load Docker image
+  #       run: |
+  #         docker load --input /tmp/plastedma.tar
+  #         docker image ls -a
+
+  #     - name: Check base entrypoint
+  #       run: docker run plastedma bin/bash -c "ls"
+
+  #     - name: Print PlastEDMA's main script
+  #       run: docker run plastedma bin/bash -c "plastedma.py -h"
 
       # - name: Database construction workflow with small FASTA protein file, WITHOUT model validation script
       #   run: docker run plastedma bin/bash -c "plastedma.py -w database_construction -i PlastEDMA/ci/sequences.fasta"
