--- a/meta.yaml
+++ b/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "PlastEDMA" %}
-{% set version = "0.2.0" %}
-{% set sha256 = "08946de7f6c560a75a451aeebca6e5039f0f1c59aea68624682f1d3987320b40" %}
+{% set version = "0.1.3" %}
+{% set sha256 = "fa0f4a9742c3cbac8a768769d6a8891cfa92aaf3de7e8e0b1c1318c934067be3" %}
 
 package:
   name: {{ name|lower }}
@@ -16,7 +16,7 @@ build:
 
 requirements:
   run:
-    - upimpai
+    - upimapi
     - pyyaml
     - hmmer
     - t-coffee
@@ -28,7 +28,7 @@ requirements:
 test:
   commands:
     - plastedma.py -h
-    - plastedma.py -i lit_sequences.fasta -o output_results -rt --output_type excel
+    # - plastedma.py -i lit_sequences.fasta -o output_results -rt --output_type excel
 
 about:
   home: https://github.com/ozefreitas/PlastEDMA
