--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,4 +1,5 @@
-database: null
+database: UniProt
+hmm_database_name: PE
 hmmsearch_out_type: tsv
 input_file: sequences.fasta
 input_file_db_const: null
